@@ -1,6 +1,9 @@
 [B]0.9.4[/B]
 Fix parentfolder list position
 New osd design
+Fix processinfo dialog
+Fix clearart on seekbar
+Remove unused skin settings
 
 [B]0.9.3[/B]
 Update widget code to use skinshortcut templates
